style.css
img {
  pointer-events: none;
}

p {
  text-align: justify;
  text-justify: inter-word;
}

body {
  height: 900px;
}

hr {
  height: 2px;
  border-width: 0;
  color: black;
  background-color: black;
}

a {
  color: black;
  text-decoration: none;
}

i {
  padding-right: 10px;
  position: relative;
  top: 2px;
}

.socmed li {
  list-style: none;
  padding-bottom: 5px;
}

.title {
  justify-content: center;
  text-align: center;
}

.foto {
  width: 150px;
  filter: brightness(0.9);
  border-radius: 10px;
}

.table-type {
  padding-left: 100px;
}

@media (max-width: 576px) {
  html {
    font-size: 75%;
  }

  .foto {
    width: 80%;
  }
}

